fixed: word-break in walletheader

--- a/src/widgets/wallet/header/ui/desktop/style.module.scss
+++ b/src/widgets/wallet/header/ui/desktop/style.module.scss
@@ -71,6 +71,8 @@
     font-weight: 400;
     line-height: normal;
     text-wrap: nowrap;
+    word-break: keep-all;
+    white-space: nowrap;
 }
 
 .WalletInfoMain{
